--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ body{
     background-size: cover;
 }
 
+h1, h2, h3{
+    font-size: 0px;
+}
+
 .dark{
     width: 100vw;
     height: 100vh;
@@ -52,7 +56,7 @@ header, .nav_list {
 }
 
 .nav_list{
-    margin-left: 806px;
+    margin-left: 1040px;
     font-weight: 500;
     font-size: 18px;
 }
@@ -69,7 +73,87 @@ header, .nav_list {
 }
 
 .nav_list li:hover {
-    color: rgb(81, 255, 0);
-    border-bottom: 2px solid rgb(81, 255, 0);
-    border-top: 2px solid rgb(81, 255, 0)
+    margin-bottom: 12px;
+    border-bottom: 3px solid#E30A17;
+}
+
+
+
+.main_text {
+    margin-top: 177px;
+}
+
+.title_text {
+    font-size: 64px;
+    font-weight: 700;
+    line-height: 66.88px;
+}
+
+.description {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 28.44px;
+}
+
+.explore_btn {
+    margin-top: 37px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 141px;
+    height: 47px;
+    background-color: #E30A17;
+}
+
+.explore_btn a{
+    padding: 10px 33px;
+}
+
+.second_block {
+    display: flex;
+}
+
+.second_description {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 1400px;
+    width: 296px;
+    backdrop-filter: blur(6px);
+    background-color: #ffffff50;
+    padding-top: 23px;
+}
+
+.cappa {
+    margin-right: 110px;
+    margin-bottom: 4px;
+    font-size: 18.73px;
+    font-weight: 900;
+}
+
+
+.description_mini{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.59px;
+    margin-bottom: 24px;
+}
+
+.view_btn {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    width: 296px;
+    height: 54px;
+    background-color: #E30A17;
+}
+
+.view_btn a{
+    font-size: 14.04px;
+    font-weight: 500;
+    padding: 18.89px; 
+    padding-right: 60px;
+    padding-left: 153px;
 }
