--- a/style.css
+++ b/style.css
@@ -10,10 +10,22 @@
 }
 
 
-body{
+/* body {
     background-image: url(img/bg.png);
     background-repeat: no-repeat;
     background-size: cover;
+} */
+
+
+.background {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    background-image: url(img/bg.png);
+    background-repeat: no-repeat;
+    background-size:100%;
 }
 
 h1, h2, h3{
