--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
 }
 
 
-/* body {
-    background-image: url(img/bg.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-} */
+body {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden
+}
 
 
 .background {
