--- a/style.css
+++ b/style.css
@@ -28,6 +28,22 @@ body {
     background-size:100%;
 }
 
+.forma {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+    z-index: 3;
+    transform: scale(0);
+    transition: 0.4s ease-in-out;
+}
+
+.forma.active {
+    transform: scale(100%);
+}
+
 h1, h2, h3{
     font-size: 0px;
 }
@@ -61,12 +77,6 @@ header, .nav_list {
     margin: 50px auto;
 }
 
-.car_neon{
-    padding: 3px;
-    /* border: 13px double gray; */
-    border-radius: 15px;
-    box-shadow: -19px 18px 10px 0px rgba(199,36,199,1);
-}
 
 .nav_list{
     margin-left: 1040px;
@@ -121,6 +131,7 @@ header, .nav_list {
 .explore_btn a{
     padding: 10px 33px;
 }
+
 
 .second_block {
     display: flex;
@@ -198,4 +209,66 @@ header, .nav_list {
     margin-top: 530px;
     top: 100px;
     right: 94px;
+}
+
+
+.forma_container {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.forma_body {
+    position: relative;
+    background-color: #fff;
+    width: 500px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.fotma_title {
+    font-size: 20px;
+    color: black;
+}
+
+.forma_body input {
+    margin-top: 50px;
+    padding: 20px;
+    width: 80%;
+    color: black;
+    border: solid 1px black;
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+}
+
+.forma_body input:focus {
+    outline: none;
+}
+
+button {
+    cursor: pointer;
+    border-style: none;
+}
+
+.forma_body button {
+    outline: none;
+    margin-top: 20px;
+    width: 50%;
+    height: 10%;
+    background-color: #E30A17;
+}
+
+
+
+
+.forma_close {
+    position: absolute;
+    top: 5px;
+    right: 15px;
+    font-size: 21px;
+    cursor: pointer;
+    color: black;
 }
