--- a/style.css
+++ b/style.css
@@ -16,12 +16,6 @@
 }
 
 
-body {
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden
-}
-
 
 .background {
     width: 100%;
@@ -277,12 +271,14 @@ button {
 .name_box input {
     border-radius: 10px;
     width: 151px;
-    padding: 14px;
-    margin-left: 6px;
-    
+    padding: 14px;   
 }
 
-.name_box input:first-child {
+.name_box label {
+    margin-left: 6px;
+}
+
+.name_box label:first-child {
     margin-left: 0px;
 }
 
@@ -353,4 +349,21 @@ button {
 
 #signin_now {
     margin-top: 9.12px;
+}
+
+label{
+    position: relative;
+}
+
+span{
+    color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 40%;
+    left: 15px;
+}
+
+form label input:focus + span {
+    top: -10%;
+    color: black;
+    font-size: 15px;
 }
