--- a/style.css
+++ b/style.css
@@ -1,374 +1,348 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style-type: none;
-    font-family: "Rubik", sans-serif;
-    font-style: normal;
-    color: white;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style-type: none;
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  color: white;
 }
 
 :root {
-    --form_background:#fff;
-    --main_form-color:#E30A17;
-    --font-opacity: #ffffff30;
+  --form_background: #fff;
+  --main_form-color: #e30a17;
+  --font-opacity: #ffffff30;
 }
-
 
 body {
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
-
 .background {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    z-index: -1;
-    background-image: url(img/bg.png);
-    background-repeat: no-repeat;
-    background-size:100%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  background-image: url(img/bg.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 .forma {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.75);
-    z-index: 3;
-    transform: scale(0);
-    transition: 0.4s ease-in-out;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 3;
+  transform: scale(0);
+  transition: 0.4s ease-in-out;
 }
 
 .forma.active {
-    transform: scale(100%);
+  transform: scale(100%);
 }
 
-h1, h2, h3{
-    font-size: 0px;
+h1,
+h2,
+h3 {
+  font-size: 0px;
 }
 
-.dark{
-    width: 100vw;
-    position: absolute;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.30);
+.dark {
+  width: 100vw;
+  position: absolute;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
-header{
-    padding-top: 99px;
-    height: 155px;
-    border-bottom: 1px solid white;
+header {
+  padding-top: 99px;
+  height: 155px;
+  border-bottom: 1px solid white;
 }
 
-header, .nav_list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+header,
+.nav_list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.container{
-    width:  90%;
-    margin: 0 auto;
+.container {
+  width: 90%;
+  margin: 0 auto;
 }
 
-.box{
-    width: 600px;
-    margin: 50px auto;
+.box {
+  width: 600px;
+  margin: 50px auto;
 }
 
-
-.nav_list{
-    margin-left: 1040px;
-    font-weight: 500;
-    font-size: 18px;
+.nav_list {
+  margin-left: 1040px;
+  font-weight: 500;
+  font-size: 18px;
 }
 
-.search_icon, 
+.search_icon,
 .logo {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.nav_list li{
-    margin-right: 50px;
-    cursor: pointer;
-    padding: 10px 0;
+.nav_list li {
+  margin-right: 50px;
+  cursor: pointer;
+  padding: 10px 0;
 }
 
 .nav_list li:hover {
-    margin-bottom: 12px;
-    border-bottom: 3px solid#E30A17;
+  margin-bottom: 12px;
+  border-bottom: 3px solid#E30A17;
 }
 
-
-
 .main_text {
-    margin-top: 177px;
+  margin-top: 177px;
 }
 
 .title_text {
-    font-size: 64px;
-    font-weight: 700;
-    line-height: 66.88px;
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 66.88px;
 }
 
 .description {
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 28.44px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 28.44px;
 }
 
 .explore_btn {
-    margin-top: 37px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 141px;
-    height: 47px;
-    background-color: #E30A17;
+  margin-top: 37px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 141px;
+  height: 47px;
+  background-color: #e30a17;
 }
 
-.explore_btn a{
-    padding: 10px 33px;
+.explore_btn a {
+  padding: 10px 33px;
 }
-
 
 .second_block {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
-
-.article_text_box{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 296px;
-    height: 155px;
-    backdrop-filter: blur(6px);
-    background-color: #ffffff50;
-    
+.article_text_box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 296px;
+  height: 155px;
+  backdrop-filter: blur(6px);
+  background-color: #ffffff50;
 }
 
 .cappa {
-    margin-right: 110px;
-    margin-bottom: 4px;
-    font-size: 18.73px;
-    font-weight: 900;
+  margin-right: 110px;
+  margin-bottom: 4px;
+  font-size: 18.73px;
+  font-weight: 900;
 }
 
-
-.description_mini{
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 16.59px;
+.description_mini {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.59px;
 }
 
 .view_btn {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 296px;
-    height: 54px;
-    background-color: #E30A17;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 296px;
+  height: 54px;
+  background-color: #e30a17;
 }
 
-.view_btn p{
-    font-size: 14.04px;
-    font-weight: 500;
-    margin-right: 15.29px;
+.view_btn p {
+  font-size: 14.04px;
+  font-weight: 500;
+  margin-right: 15.29px;
 }
 
 .arrow {
-    filter: invert();
-    margin-right: 34.08px;
+  filter: invert();
+  margin-right: 34.08px;
 }
 
-
-.social_icon_list{
-    display: flex;
+.social_icon_list {
+  display: flex;
 }
 
-.social_icon{
-    margin-top: 118.5px;
-    margin-right: 19.37px;
-    fill: white;
-    width: 21px;
+.social_icon {
+  margin-top: 118.5px;
+  margin-right: 19.37px;
+  fill: white;
+  width: 21px;
 }
 
-
-.useX:hover{
-    fill: red;
-    cursor: pointer;
+.useX:hover {
+  fill: red;
+  cursor: pointer;
 }
-
 
 .absolute {
-    position: absolute;
-    margin-top: 530px;
-    top: 100px;
-    right: 94px;
+  position: absolute;
+  margin-top: 530px;
+  top: 100px;
+  right: 94px;
 }
 
-
-
-.montserrat{
-    font-family: "Montserrat", sans-serif;
-    font-weight: 400;
+.montserrat {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
 }
 
 .forma_container {
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
-
 
 .forma_body {
-    position: relative;
-    background-color: var(--form_background);
-    width: 350px;
-    height: 416.5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
+  position: relative;
+  background-color: var(--form_background);
+  width: 350px;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
 }
 
-
-
 .forma_body input {
-    margin-top: 10px;
-    padding: 14px;
-    border-radius: 10px;
-    width: 308px;
-    color: var(--font-opacity);
-    border: solid 1px black;
-    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
-    color: black;
+  margin-top: 10px;
+  padding: 14px;
+  border-radius: 10px;
+  width: 308px;
+  color: var(--font-opacity);
+  border: solid 1px black;
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+  color: black;
 }
 
 .forma_body input:focus {
-    outline: none;
+  outline: none;
 }
 
-
-
 button {
-    cursor: pointer;
-    border-style: none;
+  cursor: pointer;
+  border-style: none;
 }
 
 .name_box {
-    display: flex;
+  display: flex;
 }
 
-
-
 .name_box input {
-    border-radius: 10px;
-    width: 151px;
-    padding: 14px;
-    margin-left: 6px;
-    
+  border-radius: 10px;
+  width: 151px;
+  padding: 14px;
+  margin-left: 6px;
 }
 
 .name_box input:first-child {
-    margin-left: 0px;
+  margin-left: 0px;
 }
 
 .register_box {
-    display: flex;
-    align-items: center;
-    margin-bottom: 9.12px;
-
+  display: flex;
+  align-items: center;
+  margin-bottom: 9.12px;
 }
 
 .register_box p {
-    font-family: "Montserrat", sans-serif;
-    font-size: 28px;
-    font-weight: 600;
-    margin-left: 12.4px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 28px;
+  font-weight: 600;
+  margin-left: 12.4px;
 }
 
-
-
 .circle {
-    height: 19.2px;
-    width: 19.2px;
+  height: 19.2px;
+  width: 19.2px;
 }
 
 .forma_body button {
-    outline: none;
-    margin-top: 20px;
-    width: 308px;
-    border-radius: 10px;
-    height: 10%;
-    background-color: var(--main_form-color);
+  outline: none;
+  margin-top: 20px;
+  width: 308px;
+  border-radius: 10px;
+  height: 10%;
+  background-color: var(--main_form-color);
 }
-
-
 
 .sub_title_p {
-    color: grey;
-    font-family: "Montserrat", sans-serif;
-    font-size: 14.5px;
-    font-weight: 400;
-    line-height: 21.75px;
+  color: grey;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14.5px;
+  font-weight: 400;
+  line-height: 21.75px;
 }
-
 
 .main_text_form {
-    font-size: 28px;
-    color: var(--main_form-color);
+  font-size: 28px;
+  color: var(--main_form-color);
 }
 
-.sub_title_p a{
-    color: var(--main_form-color);
-    text-decoration:underline;
+.sub_title_p a {
+  color: var(--main_form-color);
+  text-decoration: underline;
 }
 
 .forma_close {
-    position: absolute;
-    top: 5px;
-    right: 15px;
-    font-size: 21px;
-    cursor: pointer;
-    color: black;
+  position: absolute;
+  top: 5px;
+  right: 15px;
+  font-size: 21px;
+  cursor: pointer;
+  color: black;
 }
 
 .submit_btn {
-    font-size: 16px;
-    line-height: 19.5px;
+  font-size: 16px;
+  line-height: 19.5px;
 }
 
 button:disabled {
-    background-color: grey;
-    cursor:default;
+  background-color: grey;
+  cursor: default;
 }
 
 #signin_now {
-    margin-top: 9.12px;
+  margin-top: 9.12px;
 }
 
 input:focus {
-     box-shadow: 0 10px 10px -10px ,  0 10px 10px -10px black;
+  box-shadow: 0 10px 10px -10px, 0 10px 10px -10px black;
 }
 
 input:focus:valid {
-    border: 1.5px solid green;
+  border: 1.5px solid green;
 }
 
 input:focus:invalid {
-    border: 1.5px solid #E30A17;
+  border: 1.5px solid #e30a17;
 }
-
